# FSAdventArticleFFI

./: .gitignore  FSAdventArticleFFI.fsproj  FSAdventArticleFFI.sln  LICENSE  Program.fs  README.md
example/: CMakeLists.txt  build_linux.sh  build_macos.sh  openssl_aes_xts.c  openssl_aes_xts.h
example_c/: .gitignore  CMakeLists.txt
example_swift/: build.sh  func.swift
example_zig/: .gitignore  build.sh  simplemath.zig
